Fixed font and spacing issues - starting board now

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,14 @@
-html, body {
-  @font-face {
-    font-family: good-chan font;
-    src: url('./random.ttf');
+@font-face {
+  font-family: "medium-font";
+  src: url(./medium.ttf);
 }
+
+@font-face {
+  font-family: "regular-font";
+  src: url(./regular.ttf);
+}
+
+@font-face {
+  font-family: "bold-font";
+  src: url(./bold.ttf);
 }
